--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recommender-app",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,14 +10,24 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "@types/react-router": "^5.1.18",
+    "ajv": "^8.0.0",
+    "antd": "^4.19.1",
+    "axios": "^0.26.1",
+    "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-animations": "^1.0.0",
+    "@types/styled-components": "^5.1.24"
   }
 }
